--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "portal-vue": "^2.1.7",
+    "text-mask-addons": "^3.8.0",
+    "v-mask": "^2.2.4",
     "vue": "^2.6.11",
     "vuelidate": "^0.7.6"
   },
